adjsuting image src for published site

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <div class="header">
-    <img src="/images/oclogo_0.png"/>
-    
+    <img src="/OpenConcept/images/oclogo_0.png"/>
+
 </div>
 
 <div class="container">
