adding css folder and styles file. adding stylesheet to index.html

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>OpenConcept</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
 <div class="header">
-    <img src="/OpenConcept/images/oclogo_0.png"/>
-
+    <div class="header--logo"><img src="/images/oclogo_0.png"/></div>
 </div>
 
 <div class="container">
+
 
 </div>
 <footer>
