adjsuting image src for published site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="header">
-    <div class="header--logo"><img src="/images/oclogo_0.png"/></div>
+    <div class="header--logo"><img src="/OpenConcept/images/oclogo_0.png"/></div>
 </div>
 
 <div class="container">
