adding styling, content, and structure for index page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
     <title>OpenConcept</title>
     <link rel="stylesheet" type="text/css" href="/OpenConcept/css/styles.css">
+    <link type="text/css" rel="stylesheet" href="/fonts.googleapis.com/css?family=Lato%7CArimo:400,700italic,400italic,700" media="all">
 </head>
 <body>
 <div class="header">
-    <div class="header--logo"><img src="/OpenConcept/images/oclogo_0.png"/></div>
+    <div class="header--logo">
+        <img atl="openconcept-logo" src="/OpenConcept/images/oclogo.png"/>
+        <h1 class="visually-hidden">OpenConcept</h1>
+    </div>
 </div>
 
 <div class="container">
-
-
+    <div class="front-page-message">
+        <div class="text">
+            <h2>OpenConcept has been purchased by CivicActions</h2>
+            <p>As of November 1st, OpenConcept has made the move to partner with CivicActions Digital Services....</p>
+            <p><a href="https://civicactions.com/">Come visit us at CivicActions </a></p>
+        </div>
+        <div class="image">
+            <img alt="image of civic actions logo" src="/OpenConcept/images/CivicActions-img.png">
+        </div>
+    </div>
 </div>
 <footer>
 
