--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="header">
     <div class="header--logo">
-        <img atl="openconcept-logo" src="/OpenConcept/images/oclogo.png"/>
+        <img alt="openconcept-logo" src="/OpenConcept/images/oclogo.png"/>
         <h1 class="visually-hidden">OpenConcept</h1>
     </div>
 </div>
@@ -16,12 +16,12 @@
 <div class="container">
     <div class="front-page-message">
         <div class="text">
-            <h2>OpenConcept has been purchased by CivicActions</h2>
-            <p>As of November 1st, OpenConcept has made the move to partner with CivicActions Digital Services....</p>
+            <h2>OpenConcept has been acquired by CivicActions</h2>
+            <p>On November 1st, OpenConcept was acquired by leading open source and agile development shop, CivicActions. See the <a href="https://civicactions.com/press/2020-11-09-civicactions-acquires-openconcept">press release for more information</a>.</p>
             <p><a href="https://civicactions.com/">Come visit us at CivicActions </a></p>
         </div>
         <div class="image">
-            <img alt="image of civic actions logo" src="/OpenConcept/images/CivicActions-img.png">
+            <img alt="CivicActions logo" src="/OpenConcept/images/CivicActions-img.png">
         </div>
     </div>
 </div>
