--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
     <title>OpenConcept</title>
     <link rel="stylesheet" type="text/css" href="/OpenConcept/css/styles.css">
