--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="text">
             <h2>OpenConcept has been acquired by CivicActions</h2>
             <p>On November 1st, OpenConcept was acquired by leading open source and agile development shop, CivicActions. See the <a href="https://civicactions.com/press/2020-11-09-civicactions-acquires-openconcept">press release for more information</a>.</p>
-            <p>We are happy that CivicActions acquired our staff and clients, so that we are able to continue the great work we were doing. If you have questions, please reach out to <a href="mailto:mike.gifford@civicactions.com">Mike Gifford</a>.
+            <p>We are pleased that this partnership included the merging of our clients into the CivicActions portfolio, and that our staff has joined the CivicActions team, so we can continue working with and for the people we care about. If you have questions, please reach out to <a href="mailto:mike.gifford@civicactions.com">Mike Gifford</a>.
             <p><a href="https://civicactions.com/">Check out CivicActions</a> to see the great team that we have joined.</p>
         </div>
         <div class="image">
