--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
 <head>
     <title>OpenConcept</title>
-    <link rel="stylesheet" type="text/css" href="/OpenConcept/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link type="text/css" rel="stylesheet" href="/fonts.googleapis.com/css?family=Lato%7CArimo:400,700italic,400italic,700" media="all">
 </head>
 <body>
 <div class="header">
     <div class="header--logo">
-        <img alt="openconcept-logo" src="/OpenConcept/images/oclogo.png"/>
+        <img alt="openconcept-logo" src="/images/oclogo.png"/>
         <h1 class="visually-hidden">OpenConcept</h1>
     </div>
 </div>
@@ -22,7 +22,7 @@
             <p><a href="https://civicactions.com/">Check out CivicActions</a> to see the great team that we have joined.</p>
         </div>
         <div class="image">
-            <img alt="CivicActions logo" src="/OpenConcept/images/CivicActions-img.png">
+            <img alt="CivicActions logo" src="/images/CivicActions-img.png">
         </div>
     </div>
 </div>
