--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="image">
             <img alt="CivicActions logo" src="/images/CivicActions-img.png">
             <br /><br />
-            <a href="https://twitter.com/intent/tweet?url=&text=Congratulations%20%40openconcept_ca%20on%20joining%20the%20%40CivicActions%20Team!">Want to congratulate us on Twitter?</a>
+            <p><strong><a href="https://twitter.com/intent/tweet?url=&text=Congratulations%20%40openconcept_ca%20on%20joining%20the%20%40CivicActions%20Team!">Want to congratulate us on Twitter?</a></strong></p>
         </div>
     </div>
 </div>
