Redirect to archive

--- a/404.html
+++ b/404.html
@@ -1,1 +1,9 @@
-Test 1234
+<head>
+  <script>
+    var url = "http://archive.openconcept.ca/"
+    var path = window.location.pathname
+    window.location.href = url+path;
+  </script>
+</head>
+<body>
+</body>
