--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="front-page-message">
         <div class="text">
             <h2>OpenConcept has been acquired by CivicActions</h2>
-            <p>On November 1st, OpenConcept was acquired by leading open source and agile development shop, CivicActions. See the <a href="https://civicactions.com/press/2020-11-09-civicactions-acquires-openconcept">press release for more information</a>.</p>
+            <p>On November 1st, 2000, OpenConcept was acquired by leading open source and agile development shop, CivicActions. See the <a href="https://civicactions.com/press/2020-11-09-civicactions-acquires-openconcept">press release for more information</a>.</p>
             <p>We are pleased that this partnership included the merging of our clients into the CivicActions portfolio, and that our staff has joined the CivicActions team, so we can continue working with and for the people we care about. If you have questions, please reach out to <a href="mailto:mike.gifford@civicactions.com">Mike Gifford</a>.
             <p><a href="https://civicactions.com/">Check out CivicActions</a> to see the great team that we have joined.</p>
             <p>If you want to find information on our old site, <a href="https://archive.openconcept.ca/">we have archived it here</a>.</p>
